--- a/src/components/LatestArticlesSection.astro
+++ b/src/components/LatestArticlesSection.astro
@@ -225,7 +225,7 @@ const getPostTag = (post: CollectionEntry<"blog">) => utilGetPostTag(post, {
   /* Amélioration de l'accessibilité et des performances */
   .latest-articles {
     /* Optimisation de la peinture */
-    contain: layout;
+    contain: layout paint style;s
   }
 
   /* Animation au chargement */
